@@ -61,8 +61,23 @@
     <template name="construction">$name = new #class( #wxparent $name, $id, $pos, $size, $style #ifnotnull $window_style @{ |$window_style @});</template>
     <template name="include">@#include &lt;wx/splitter.h&gt;</template>
 	<template name="settings">
-	  #ifnotnull $sashgravity"
-	  $name->SetSashGravity( $sashgravity ); #nl
+	  #ifnotnull $sashgravity
+	  @{
+		#ifnotequal $sashgravity "0.0"
+		@{ $name->SetSashGravity( $sashgravity ); #nl @}
+	  @}
+	  
+	  #ifnotnull $sashsize
+	  @{
+		#ifnotequal $sashsize "-1"
+		@{	$name->SetSashSize( $sashsize ); #nl @}
+	  @}
+	  
+	  #ifnotnull $min_pane_size
+	  @{
+		#ifnotequal $min_pane_size "0"
+		@{	$name->SetMinimumPaneSize( $min_pane_size ); #nl @}
+	  @}
     </template>
   </templates>
 
